--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -56,6 +56,20 @@
   "bestellung.contactTitle": "Informacje o zamówieniach",
   "bestellung.contactText1": "Aby złożyć zamówienie, możesz również skorzystać z poniższych opcji kontaktu.",
   "bestellung.contactText2": "Możesz również napisać do nas przez WhatsApp, e-mail lub zadzwonić.",
+  "validation.required.name": "Imię jest wymagane",
+  "validation.required.email": "E-mail jest wymagany",
+  "validation.invalid.email": "Nieprawidłowy adres e-mail",
+  "validation.required.birthdate": "Data urodzenia jest wymagana",
+  "validation.required.phone": "Numer telefonu jest wymagany",
+  "validation.required.address": "Adres jest wymagany",
+  "validation.required.insuranceNumber": "Numer ubezpieczenia jest wymagany",
+  "validation.insurance.format": "Format: 1 litera + 9 cyfr (np. A123456789)",
+  "validation.required.firstName": "Imię jest wymagane",
+  "validation.required.lastName": "Nazwisko jest wymagane",
+  "validation.required.street": "Ulica jest wymagana",
+  "validation.required.houseNumber": "Numer domu jest wymagany",
+  "validation.required.zipCode": "Kod pocztowy jest wymagany",
+  "validation.required.city": "Miasto jest wymagane",
   "allgemeinmedizin.heroTitle": "Medycyna ogólna",
   "allgemeinmedizin.heroText": "Medycyna ogólna to serce naszej praktyki. Jesteśmy Twoim pierwszym punktem kontaktu w sprawach zdrowotnych – zarówno w przypadku ostrych dolegliwości, chorób przewlekłych, jak i profilaktyki. Dzięki nowoczesnej diagnostyce, osobistemu podejściu i wieloletniemu doświadczeniu wspieramy Ciebie i Twoją rodzinę w każdej sytuacji.",
   "allgemeinmedizin.focusTitle": "Nasze obszary specjalizacji",
