--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -70,6 +70,21 @@
   "validation.required.houseNumber": "Numer domu jest wymagany",
   "validation.required.zipCode": "Kod pocztowy jest wymagany",
   "validation.required.city": "Miasto jest wymagane",
+  "calendar.weekday.sun": "Nd",
+  "calendar.weekday.mon": "Pn",
+  "calendar.weekday.tue": "Wt",
+  "calendar.weekday.wed": "Śr",
+  "calendar.weekday.thu": "Czw",
+  "calendar.weekday.fri": "Pt",
+  "calendar.weekday.sat": "Sob",
+  "calendar.previousMonth": "Poprzedni miesiąc",
+  "calendar.nextMonth": "Następny miesiąc",
+  "calendar.availableTimes": "Dostępne terminy",
+  "calendar.selectDate": "Proszę wybrać datę",
+  "calendar.selectDateInCalendar": "← Wybierz datę w kalendarzu",
+  "calendar.legend.fridayVideoOnly": "📹 Piątek (Tylko wideokonsultacje)",
+  "calendar.legend.weekendHoliday": "Weekend / Święto",
+  "calendar.loading": "Ładowanie lekarzy...",
   "allgemeinmedizin.heroTitle": "Medycyna ogólna",
   "allgemeinmedizin.heroText": "Medycyna ogólna to serce naszej praktyki. Jesteśmy Twoim pierwszym punktem kontaktu w sprawach zdrowotnych – zarówno w przypadku ostrych dolegliwości, chorób przewlekłych, jak i profilaktyki. Dzięki nowoczesnej diagnostyce, osobistemu podejściu i wieloletniemu doświadczeniu wspieramy Ciebie i Twoją rodzinę w każdej sytuacji.",
   "allgemeinmedizin.focusTitle": "Nasze obszary specjalizacji",
